# linalg

./: .travis.yml  CMakeLists.txt  azure-pipelines.yml  environment.yml  shell.nix
cmake/: FindMKL.cmake
linalg/: CMakeLists.txt
linalg/src/: CMakeLists.txt  core.cc  dimension.cc  dimension.h  export_linalg.cc  linalg.h
